--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,16 +12,25 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
-body {
+/* body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
+}*/
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+} 
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+  body{
+    @apply font-primary bg-primary text-white leading-loose;
   }
 }
