--- a/app/globals.css
+++ b/app/globals.css
@@ -2,35 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
-/* body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}*/
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-} 
-
 @layer base {
-  :root {
-    --radius: 0.5rem;
-  }
+
   body{
     @apply font-primary bg-primary text-white leading-loose;
   }
+
+  h1{
+    @apply text-[48px] xl:text-[60px] leading-[1.1] font-semibold;
+  }
+  h2{
+    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
+  }
+  h3{
+    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
+  }
+  .text-outline {
+    -webkit-text-stroke: 1px #ffffff;
+  }
+  
+  .group:hover .text-outline {
+    -webkit-text-stroke: 1px #00ff99;
+  }
+  
 }
+
+
